--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -2,9 +2,7 @@
 \setcounter{chapter}{10}
 
 \begin{document}
-\chapter{Lecture 11}
-\underline{\textbf{\Large Unique Factorization Domains}}
-
+\chapter{Unique Factorization Domains}
 \begin{dfn}[title = {Irreducible/Reducible, Prime, Associate Elements}]
 	Let $R$ be an integral domain
 	\begin{enumerate}
@@ -18,7 +16,7 @@
 	\end{enumerate}
 \end{dfn}
 
-\begin{prop}
+\begin{prop}[title = Prime elements in integral domain are irreducible]
 	Any prime element in an integral domain is irreducible.
 \end{prop}
 \begin{proof}
@@ -63,7 +61,7 @@
 	which immediately tells us $b=0$ and $a=\pm 1$.\\
 	But $3\notin \pm (N(a+b\sqrt{-5})\rdot N(2+\sqrt{-5}))$
 \end{proof}
-\begin{prop}
+\begin{prop}[title = Element in PID is prime iff it is irreducible]
 	In a PID an element is prime \textit{iff} it is irreducible.
 \end{prop}
 \begin{proof}
@@ -98,7 +96,7 @@
 	\[3^2=(2+\sqrt{-5})\rdot (2-\sqrt{-5})\]
 	and $3,2\pm \sqrt{-5}$ are irreducibles.
 \end{example}
-\begin{prop}
+\begin{prop}[title = Element in UFD is prime iff it is irreducible]
 	In a UFD, an element is prime \textit{iff} it is irreducible.
 \end{prop}
 \begin{proof}
@@ -115,7 +113,7 @@
 	so by unique factorization, w.l.og
 	\[r=u\rdot p_1,\, u\in R^\times \implies r|a\]
 \end{proof}
-\begin{prop}
+\begin{prop}[title=Nonzero elements in UFD have GCD]
 	Let $a,b\in R\setminus \{0\}$ in a UFD. Then there is a greatest common divisor of $a,b$ in $R$.
 \end{prop}
 \begin{proof}
