--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{1}
 
 \begin{document}
-\chapter{Lecture 2}
+\chapter{More Examples}
 Let's see some basic properties of a ring $R$:
 \begin{enumerate}
 	\item $0\rdot a= a\rdot 0=0 \quad \forall a \in R$
