--- a/L12/L12.tex
+++ b/L12/L12.tex
@@ -2,9 +2,7 @@
 \setcounter{chapter}{11}
 
 \begin{document}
-\chapter{Lecture 12}
-\underline{\textbf{\Large PIDs are UFDs}}
-
+\chapter{PIDs are UFDs and Polynomial Rings}
 \begin{dfn}[title = {Ascending Chains, Noetherian Ring}]
 	Let $R$ be a commutative ring with $1\ne 0$.\\
 	An \textbf{ascending chain} of ideals in $R$ is a sequence
@@ -13,7 +11,7 @@
 	We say $R$ satisfies the \textbf{ascending chain condition} (a.c.c.) if every ascending chain stabilizes.\\
 	If $R$ satisfies the a.c.c., we say it is a \textbf{Noetherian ring}.
 \end{dfn}
-\begin{thm}
+\begin{thm}[title = PID is Noetherian]
 	If $R$ is a PID, then $R$ is Noetherian.
 \end{thm}
 \begin{proof}
@@ -29,13 +27,13 @@
 	Hence $(a)\subset I_n$ implying $I\subset I_N$ and so we deduce
 	\[I=I_N=I_{N+1}=I_{N+2}=\dots\]
 \end{proof}
-\begin{thm}
+\begin{thm}[title = PID IS UFD]
 	Every PID is a UFD.
 \end{thm}
 Let $R$ be a PID.\\
 We want to show if $R\in R\setminus \{0\},\, r\notin R^\times$.\\
 Then $r$ admits a \textbf{unique} expression as a product of irreducibles.
-\begin{lem}[title= Existence]
+\begin{lem}
 	R has \textbf{some} expression as a product of irreducibles
 \end{lem}
 \begin{proof}
@@ -52,7 +50,7 @@ Then $r$ admits a \textbf{unique} expression as a product of irreducibles.
 	\[r=(r_{111\dots1}\rdot r_{111\dots 2})\rdot \dots \rdot (r_{222\dots1}\rdot r_{222\dots 2})\]
 	where each term on the right is irreducible.
 \end{proof}
-\begin{lem}[title= Uniqueness]
+\begin{lem}
 	The factorization into irreducibles is \textbf{unique} (up to reordering and associates).
 \end{lem}
 \begin{proof}
@@ -90,51 +88,51 @@ We can now see a hierarchy for the specific structures we have discussed thus fa
 	&\text{Fields}&&
 \end{tikzcd}
 \newpage
-\underline{\textbf{\Large Polynomial Rings (Again)}}
+\section*{Polynomial Rings (Again)}
 
 Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've already proven
-(1) $R[x]$ is an integral domain.\\
-(2) $R[x]^\times=R^\times$ e.g $\Z[x]$, the only units are $\{\pm 1\}$.\\
-(3) $\deg[p(x)\rdot q(x)]=\deg p(x)+ \deg q(x)$\\
-(4) The field of fractions of $R[x]$ is the field of rational functions
-	\[R(x)\coloneqq \left\{ \left. \frac{p(x)}{q(x)} \right| \, p,q\in R[x],\, q\ne 0\right\}\]
-(5) If $F$ is a field, then $F[x]$ is a Euclidean Domain.
-	\begin{crl}
-		If $F$ is a field, $F[x]$ is a PID, UFD, and Noetherian
+(1) $R[X]$ is an integral domain.\\
+(2) $R[X]^\times=R^\times$ e.g $\Z[X]$, the only units are $\{\pm 1\}$.\\
+(3) $\deg[p(X)\rdot q(X)]=\deg p(X)+ \deg q(X)$\\
+(4) The field of fractions of $R[X]$ is the field of rational functions
+	\[R(X)\coloneqq \left\{ \left. \frac{p(X)}{q(X)} \right| \, p,q\in R[X],\, q\ne 0\right\}\]
+(5) If $F$ is a field, then $F[X]$ is a Euclidean Domain.
+	\begin{crl}[title = {\texorpdfstring{$F[X]$}{TEXT} is PID, UFD, and Noetherian}]
+		If $F$ is a field, $F[X]$ is a PID, UFD, and Noetherian.
 	\end{crl}
 (6) Let $I\subset R$ be an ideal, and define
-	\[(I)\coloneqq I[x] \coloneqq \{p(x)\in R[x]\mid \text{coeffs. are in } I\}\]
+	\[(I)\coloneqq I[X] \coloneqq \{p(X)\in R[X]\mid \text{coeffs. are in } I\}\]
 	Then 
-	\[R[x]/(I)\cong (R/I)[x]\]
+	\[R[X]/(I)\cong (R/I)[X]\]
 \begin{proof}~\\
 	Consider the map
 	\begin{align*}
-	\phi\colon R[x] &\to (R/I)[x] \\
-	a_0+a_1x+\dots+a_nx^n &\mapsto \obar{a}+\obar{a_1}x+\obar{a_2}x^2+\dots+\obar{a_n}x^n
+	\phi\colon R[X] &\to (R/I)[X] \\
+	a_0+a_1X+\dots+a_nX^n &\mapsto \obar{a}+\obar{a_1}X+\obar{a_2}X^2+\dots+\obar{a_n}X^n
 	\end{align*}
 	for example
 	\begin{align*}
-	\phi\colon \Z[x] &\to (\Z/3\Z)[x] \\
-	1+2x+4x^3 &\mapsto \obar{1}+\obar{2}x+\obar{4}x^3=\obar{1}+\obar{2}x+x^3
+	\phi\colon \Z[X] &\to (\Z/3\Z)[X] \\
+	1+2X+4X^3 &\mapsto \obar{1}+\obar{2}X+\obar{4}X^3=\obar{1}+\obar{2}X+X^3
 	\end{align*}
 	"Clearly" $\phi$ is a surjective ring homomorphism, so
-	\[(R/I)[x]\cong R[x]/\Ker \phi\]
-	But $\Ker\phi\coloneqq\{a_0+a_1x+\dots+a_nx^n\mid a_i\in I\}=(I)$.
+	\[(R/I)[X]\cong R[X]/\Ker \phi\]
+	But $\Ker\phi\coloneqq\{a_0+a_1X+\dots+a_nX^n\mid a_i\in I\}=(I)$.
 \end{proof}
 \begin{crl}
-		If $I\subset R$ is prime, then $(I)\subset R[x]$ is prime.
+		If $I\subset R$ is prime, then $(I)\subset R[X]$ is prime.
 \end{crl}
 \begin{example}
 	Consider $3\Z \coloneqq \{0,3,-3,6,-6,\dots\}$ and
-	\[(3\Z)\coloneqq \{a_0+a_1x+a_2x+\dots+a_nx^n\mid a_i\in 3\Z\} \implies \Z[x]/(3\Z)\cong (\Z/3\Z)[x]\]
+	\[(3\Z)\coloneqq \{a_0+a_1X+a_2X^2+\dots+a_nX^n\mid a_i\in 3\Z\} \implies \Z[X]/(3\Z)\cong (\Z/3\Z)[x]\]
 	e.g 
-	\[1+2x+4x^3=1+2x+x^3+\underbrace{3x^3}_{\in 3\Z}\]
+	\[1+2X+4X^3=1+2X+X^3+\underbrace{3X^3}_{\in 3\Z}\]
 	we can think about the coefficients
 	\[\underbrace{1,2,4}_{\in \Z}\to \underbrace{\obar{1},\obar{2},\obar{1}}_{\in \Z/3\Z}\]
 \end{example}
 
-\begin{thm}
-	If $a(x),b(x)\in F[x]$ where $F$ is a field. Then there exist unique $q(x),r(x)\in F[x]$ such that $\deg (r(x)) < \deg (b(x))$ (or $r(x)=0$) for which $a(x)=q(x)\rdot b(x)+r(x)$.
+\begin{thm}[title = \texorpdfstring{$F[X]$}{TEXT} satisfies euclidean condition]
+	If $a(X),b(X)\in F[X]$ where $F$ is a field. Then there exist unique $q(X),r(X)\in F[X]$ such that $\deg (r(X)) < \deg (b(X))$ (or $r(X)=0$) for which $a(X)=q(X)\rdot b(X)+r(X)$.
 \end{thm}
 \textit{Note:} Recall $\Z$ are a Euclidean Domain with $N(n)=|n|$, e.g
 \begin{align*}
@@ -142,14 +140,14 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 7=4\rdot 2-1&\quad N(-1)=1<N(2)
 \end{align*}
 \begin{proof}
-	Suppose $a(x)=q(x)\rdot b(x)+r(x)=q'(x)b(x)+r'(x)$, then
+	Suppose $a(X)=q(X)\rdot b(X)+r(X)=q'(X)b(X)+r'(X)$, then
 	\begin{align*}
-	r(x)&=a(x)-q(x)\rdot b(x)\\
-	r'(x)&=a(x)-q'(x)\rdot b(x)
+	r(X)&=a(X)-q(X)\rdot b(X)\\
+	r'(X)&=a(X)-q'(X)\rdot b(X)
 	\end{align*}
 	and $\deg(r),\deg(r')<\deg(b)$.\\
 	Consider
-	\[r(x)-r'(x)=q'(x)\rdot b(x)-q(x)\rdot b(x) = [q'(x)-q(x)]\rdot b(x)\]
+	\[r(X)-r'(X)=q'(x)\rdot b(X)-q(X)\rdot b(X) = [q'(X)-q(X)]\rdot b(X)\]
 	If $q'-q,b\ne 0$, then 
 	\begin{align*}
 	&\deg[(q'-q)\rdot b]=\deg(q'-q)+\deg(b)\\
@@ -157,38 +155,38 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 	\end{align*}
 	Then $\deg{q-q'}$ must be $0$ and so $q'-q=0\implies q'=q\implies r=r'$.
 \end{proof}
-\begin{crl}
-	Suppose $F,K$ are fields with $F\subset K$ and $a(x),b(x)\in F[x]$. \\
+\begin{crl}[title = ]
+	Suppose $F,K$ are fields with $F\subset K$ and $a(X),b(X)\in F[X]$. \\
 	Then the quotient and remainder polynomials of $a$ by $b$ are independent of of field.
 \end{crl}
 \begin{proof}
-	There exist $q(x),r(x)\in F[x]$ and $Q(X), R(X)\in K[x]$ with $\deg r< \deg b$ and $\deg R< \deg b$, such that
-	\[a(x)=q(x)\rdot b(x)+r(x)\quad a(x)=Q(x)\rdot b(x)+R(x)\]
-	But there is uniqueness since $q,r\in K[x]$ it must mean that
-	\[q(x)=Q(x)\quad r(x)=R(x)\]
+	There exist $q(X),r(X)\in F[X]$ and $Q(X), R(X)\in K[X]$ with $\deg r< \deg b$ and $\deg R< \deg b$, such that
+	\[a(X)=q(X)\rdot b(X)+r(X)\quad a(X)=Q(X)\rdot b(X)+R(X)\]
+	But there is uniqueness since $q,r\in K[X]$ it must mean that
+	\[q(X)=Q(X)\quad r(X)=R(X)\]
 \end{proof}
 \begin{crl}
-	$b(x)|a(x)$ in $K[x]$ \textit{iff} $b(x)|a(x)$ in $F[x]$
+	$b(X)|a(X)$ in $K[X]$ \textit{iff} $b(X)|a(X)$ in $F[X]$
 \end{crl}
 \begin{example}
-	\[(x-1)|x^2-1 \text{ in } \R[x],\C[x]\]
+	\[(X-1)|X^2-1 \text{ in } \R[X],\C[X]\]
 	However,
-	\[(x-i)| x^2+1 \text{ in } \C[x] \text{ but not } \R[x]\]
-	Since $x^2+1$ has no nontrivial factors in $\R[x]$.
+	\[(X-i)| X^2+1 \text{ in } \C[X] \text{ but not } \R[X]\]
+	Since $X^2+1$ has no nontrivial factors in $\R[X]$.
 \end{example}
 \newpage
-\underline{\textbf{\Large Polynomial Rings with Multiple Variables}}
+\section*{Polynomial Rings with Multiple Variables}
 
-\begin{dfn}
+\begin{dfn}[title = Multivariable Polynoimal Ring]
 	Let $R$ be a commutative ring with $1\ne 0$. \\
 	The \textbf{polynomial ring in the variables }$X_1,\dots,X_n$ \textbf{with coefficients in R} is defined inductively as
 	\[R[X_1,X_2,\dots,X_n]\coloneqq R[X_1,X_2,\dots,X_{n-1}][X_n]\]
 	Concretely, think of $R[X_1,\dots,X_n]$ as finite sums of \textbf{monomials}, i.e 
 	\[aX_1^{d_1}X_2^{d_1}\dots X_n^{d_n},\quad d_i\in \Z, \, d_i\ge 0\]
 	e.g
-	\[1+2xy+y^2,2x-7x^3y+2xy^4+1\in \Z[x,y]\]
+	\[1+2XY+Y^2,2X-7X^3y+2XY^4+1\in \Z[X,Y]\]
 \end{dfn}
-\begin{dfn}
+\begin{dfn}[title = {Multi-Degree}]
 	The \textbf{degree} of a monomial
 	\[aX_1^{d_1}X_2^{d_1}\dots X_n^{d_n}\]
 	is $d=d_1+d_2+\dots+d_n$.\\
