--- a/L8/L8.tex
+++ b/L8/L8.tex
@@ -2,72 +2,71 @@
 \setcounter{chapter}{7}
 
 \begin{document}
-\chapter{Lecture 8}
-\underline{\textbf{\Large More on Maximal Ideals}}
+\chapter{More on Maximal Ideals and Ring of Fractions}
 
-\textit{Recall}: $(x) \subset \Z[x]$ is prime, but $(x)\subsetneq (2,x)$, so it not maximal.\\
-$(x)\in \R[x]$ is maximal because $\R[x]/(x) \cong \R$ is a field
+\textit{Recall}: $(X) \subset \Z[X]$ is prime, but $(X)\subsetneq (2,X)$, so it not maximal.\\
+$(X)\in \R[X]$ is maximal because $\R[X]/(X) \cong \R$ is a field
 
 \begin{example}
 	Let $a\in \R$. We defined the evaluation homomorphism before:
 	\begin{align*}
-	\ev_a\colon \R[x] &\to \R \\
-	p(x) &\mapsto p(a)
+	\ev_a\colon \R[X] &\to \R \\
+	p(X) &\mapsto p(a)
 	\end{align*}
 	\textit{Observe} that $\ev_a$ is in fact surjective. Then
-	\[\R[x]/\Ker(\ev_a) \cong \R \implies \Ker(\ev_a) \text{ is a maximal ideal}\]
+	\[\R[X]/\Ker(\ev_a) \cong \R \implies \Ker(\ev_a) \text{ is a maximal ideal}\]
 \end{example}
 	Denote $M_a\coloneqq \Ker(\ev_a)$
 	\begin{claim}
-		$M_a = (x-a)$\quad (e.g $M_0 =(x)$)
+		$M_a = (X-a)$\quad (e.g $M_0 =(X)$)
 	\end{claim}
 	\begin{proof}~\\
-		If $p(x) \in (x-a)$ then we may write $p(x)=q(x)\rdot (x-a),\, q(x)\in \R[x]$, then
-		\[\ev_a(p(x)) = p(a) = q(a)\rdot (a-a)=0 \implies p(x)\in M_a \implies (x-a) \subset M_a\] 
-		Conversely, suppose $p(x) \in M_a = \Ker(\ev_a)$. Let $p(x) = a_0 + a_1x+a_2x^2+\dots+a_nx^n$, then you can check with polynomial division that $x-a$ divides $p(x)$ with remainder exactly $p(a)$ which is $0$, hence $x-a$ is a factor of $p(x)$ [obviously, if $p(x)$ is a polynomial with a root at $x=a$, then $x-a$ is a factor], and we can write
-		\[\frac{p(x)}{x-a} = q(x)\]
+		If $p(X) \in (X-a)$ then we may write $p(X)=q(X)\rdot (X-a),\, q(X)\in \R[X]$, then
+		\[\ev_a(p(X)) = p(a) = q(a)\rdot (a-a)=0 \implies p(X)\in M_a \implies (X-a) \subset M_a\] 
+		Conversely, suppose $p(X) \in M_a = \Ker(\ev_a)$. Let $p(X) = a_0 + a_1X+a_2X^2+\dots+a_nX^n$, then you can check with polynomial division that $X-a$ divides $p(X)$ with remainder exactly $p(a)$ which is $0$, hence $X-a$ is a factor of $p(X)$ [obviously, if $p(X)$ is a polynomial with a root at $X=a$, then $X-a$ is a factor], and we can write
+		\[\frac{p(X)}{X-a} = q(X)\]
 		therefore,
-		\[p(x)=q(x)\rdot (x-a)\implies p(x) \in (x-a) \implies M_a \subset (x-a) \]
-		and hence $M_a =(x-a)$.
+		\[p(X)=q(X)\rdot (X-a)\implies p(X) \in (X-a) \implies M_a \subset (X-a) \]
+		and hence $M_a =(X-a)$.
 	\end{proof}
-\textbf{\textit{Q:}} Is every maximal ideal of $\R[x]$ of the form $M_a$?\\
-For example, in $\Z$, the $\{\text{maximal ideals}\} =\{\text{prime ideals}\}$ but we saw above that in $\Z[x]$ there exist prime ideals that are not maximal.\\
+\textbf{\textit{Q:}} Is every maximal ideal of $\R[X]$ of the form $M_a$?\\
+For example, in $\Z$, the $\{\text{maximal ideals}\} =\{\text{prime ideals}\}$ but we saw above that in $\Z[X]$ there exist prime ideals that are not maximal.\\
 Two standard questions:\\
 (1) What are the primes?\\
 (2) What are the maximal ideals?
 
 \begin{claim}
-Consider $I=(x^2+1)$, then $I\subset \R[x]$ is a maximal ideal.
+Consider $I=(X^2+1)$, then $I\subset \R[X]$ is a maximal ideal.
 \end{claim}
 \begin{proof}
 	We have that
-	\[\R[x] = \{a_0+a_1x+a_2x^2+a_3x^3+\dots+a_nx^n| a_k\in \R, \, k=0,1,2,\dots n\}\]
-	What does $\obar{x^n}$ look like in $\R[x]/(x^2+1)$?
+	\[\R[X] = \{a_0+a_1X+a_2X^2+a_3X^3+\dots+a_nX^n| a_k\in \R, \, k=0,1,2,\dots n\}\]
+	What does $\obar{X^n}$ look like in $\R[X]/(X^2+1)$?
 	We can deduce from the zero coset of the ideal:
-		\[x^2+1 \in (x^2+1) \implies \obar{x^2+1} = \obar{0} \implies \obar{x^2} = \obar{-1} \in \R[x]/I \]
+		\[X^2+1 \in (X^2+1) \implies \obar{X^2+1} = \obar{0} \implies \obar{X^2} = \obar{-1} \in \R[X]/I \]
 	Furthermore
 		\begin{align*}
-		x^3 = x\rdot x^2 &\implies \obar{x^3} = \obar{x} \rdot \obar{(-1)} \in \R[x]/I\\
-		x^4= x^2\rdot x^2 &\implies \obar{x^4} = \obar{(-1)} \rdot  \obar{(-1)} \in \R[x]/I
+		X^3 = X\rdot X^2 &\implies \obar{X^3} = \obar{X} \rdot \obar{(-1)} \in \R[x]/I\\
+		X^4= X^2\rdot x^2 &\implies \obar{X^4} = \obar{(-1)} \rdot  \obar{(-1)} \in \R[X]/I
 	\end{align*}
-	Therefore, since all powers of $x$ greater than $2$ can be deconstructed into products of $-1$ and $x$, we can collapse the cosets of the quotient to a convenient form:
-	\[\R[x]/I = \{\obar{a_0+a_1x}\mid a_0,a_1\in \R\} \]
-	with the rule $\obar{x}\rdot \obar{x}=\obar{-1}$.\\
+	Therefore, since all powers of $X$ greater than $2$ can be deconstructed into products of $-1$ and $X$, we can collapse the cosets of the quotient to a convenient form:
+	\[\R[X]/I = \{\obar{a_0+a_1X}\mid a_0,a_1\in \R\} \]
+	with the rule $\obar{X}\rdot \obar{X}=\obar{-1}$.\\
 	This should be familiar and there is a ring isomorphism
 	\begin{align*}
-	\R[x]/I &\to \C \\
+	\R[X]/I &\to \C \\
 	\obar{1} &\mapsto 1 \\
-	\obar{x} &\mapsto i
+	\obar{X} &\mapsto i
 	\end{align*}
 	and since the quotient ring is isomorphic to the field $\C$, $I$ is maximal.
 \end{proof}
 \begin{claim}
-	$(x^2+1)$ is \textbf{not} maximal in $\C[x]$
+	$(X^2+1)$ is \textbf{not} maximal in $\C[X]$
 \end{claim}
 \begin{proof}
-	We know that $x+i,x-i \in \C[x]$ and
-	\[(x+i)(x-i)=x^2+1\in (x^2+1)\]
-	But $x+i,x-i \notin (x^2+1)$ therefore $(x^2+1)$ is not prime in $\C[x]$ and consequently is not maximal.
+	We know that $X+i,x-i \in \C[X]$ and
+	\[(X+i)(X-i)=X^2+1\in (X^2+1)\]
+	But $X+i,X-i \notin (X^2+1)$ therefore $(X^2+1)$ is not prime in $\C[X]$ and consequently is not maximal.
 \end{proof}
 \textit{Observe} if $a\in R\subset S$ Then
 \begin{align*}
@@ -77,11 +76,11 @@ Consider $I=(x^2+1)$, then $I\subset \R[x]$ is a maximal ideal.
 \end{align*}
 can have different properties as ideals, e.g
 \begin{align*}
-\underbrace{(x)\subset \Z[x]}_{\text{prime}} &\longrightarrow \,\,\underbrace{(x) \subset \R[x]}_{\text{maximal}}
+\underbrace{(X)\subset \Z[X]}_{\text{prime}} &\longrightarrow \,\,\underbrace{(x) \subset \R[X]}_{\text{maximal}}
 \\
-\underbrace{(x^2+1)\subset \R[x]}_{\text{maximal}} &\longrightarrow \underbrace{(x^2+1) \subset \C[x]}_{\text{not prime, not maximal}}
+\underbrace{(X^2+1)\subset \R[X]}_{\text{maximal}} &\longrightarrow \underbrace{(X^2+1) \subset \C[X]}_{\text{not prime, not maximal}}
 \end{align*}\newpage
-\underline{\textbf{\Large The Ring of Fractions}}
+\section*{The Ring of Fractions}
 
 \textbf{\textit{Q:}} How do we build $\Q$ out of $\Z$?\\
 We want to add in multiplicative inverses like $\frac{1}{2},\frac{1}{3},\frac{1}{4},\dots$ but we can't just add them in and get a ring.\\
@@ -165,21 +164,21 @@ However, if $r$ is a zero divisor, $r\rdot s=0$ then in this case we want to exc
 	$Q(\Z)=\Q$
 \end{example}
 \begin{example}
-	$R=\R[x]$ is an integral domain. The fractional field of $R$ is the field of rational functions
-	\[Q(R)=\R(x)\coloneqq \left\{\left. \frac{p(x)}{q(x)}\right|p,q\in \R[x],\, q\ne 0 \right\} \]
+	$R=\R[X]$ is an integral domain. The fractional field of $R$ is the field of rational functions
+	\[Q(R)=\R(X)\coloneqq \left\{\left. \frac{p(X)}{q(X)}\right|p,q\in \R[X],\, q\ne 0 \right\} \]
 \end{example}
 \begin{example}
-	If $R$ is any integral domain with field of fractions $Q(R)=F$.  Consider the integral domain $R[x]$. Then in particular $R\subset R[x]$, and  $R[x]\subset Q(R[x])$ which tells us that
+	If $R$ is any integral domain with field of fractions $Q(R)=F$.  Consider the integral domain $R[X]$. Then in particular $R\subset R[X]$, and  $R[X]\subset Q(R[X])$ which tells us that
 	\begin{center}
 		\begin{tikzcd}[column sep=small]
-			R \arrow[rr, "\text{inclusion}"] \arrow[rd] &  & Q(R[x]) \\
+			R \arrow[rr, "\text{inclusion}"] \arrow[rd] &  & Q(R[X]) \\
 			& F \arrow[ur] & 
 		\end{tikzcd}
 	\end{center}
-	e.g $\Z \subset \Z[x]$, so in particular $\Q\subset Q(\Z[x])$.\\
-	In fact, since in $Q(\Z[x])$ you've added inverses to the coefficients but you also inverses to the polynomials, so you will get the field of rational functions
-	\[Q(\Z[x])=\R(x)\]
-	Furthermore, this is generally true, as the field of fractions of $R[x]$ is going to be the rational functions with coefficients in the field of fractions of $R$, i.e
-	\[Q(R[x])=F(x)\]
+	e.g $\Z \subset \Z[X]$, so in particular $\Q\subset Q(\Z[X])$.\\
+	In fact, since in $Q(\Z[X])$ you've added inverses to the coefficients but you also inverses to the polynomials, so you will get the field of rational functions
+	\[Q(\Z[X])=\R(X)\]
+	Furthermore, this is generally true, as the field of fractions of $R[X]$ is going to be the rational functions with coefficients in the field of fractions of $R$, i.e
+	\[Q(R[X])=F(X)\]
 \end{example}
 \end{document}
