Recompiled individual lectures

--- a/Main.tex
+++ b/Main.tex
@@ -150,7 +150,7 @@ boxed title style = {colback=green!35!black}
 
 \newcommand{\D}{\mathrm{d}}
 \newcommand{\R}{\mathbb{R}}
-\renewcommand{\C}{\mathbb{C}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
