L13 and some changes to numbering

--- a/L10/L10.tex
+++ b/L10/L10.tex
@@ -186,7 +186,7 @@ Think about it like this: in the integers, if you consider the ideal generated b
 	\[(p)=(m)\]
 	is maximal.
 \end{proof}
-\begin{thm}[title = If \texorpdfstring{$R[X]$}{TEXT} is PID then \texorpdfstring{$R$}{TEXT} is field]
+\begin{thm}[title = If \texorpdfstring{$R[X]$}{R[X]} is PID then \texorpdfstring{$R$}{R} is field]
 	If $R$ is a commutative ring such that $R[X]$ is a PID, then $R$ is a field.
 \end{thm}
 \begin{proof}~\\
