--- a/L12/L12.tex
+++ b/L12/L12.tex
@@ -97,7 +97,7 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 (4) The field of fractions of $R[X]$ is the field of rational functions
 	\[R(X)\coloneqq \left\{ \left. \frac{p(X)}{q(X)} \right| \, p,q\in R[X],\, q\ne 0\right\}\]
 (5) If $F$ is a field, then $F[X]$ is a Euclidean Domain.
-	\begin{crl}[title = {\texorpdfstring{$F[X]$}{TEXT} is PID, UFD, and Noetherian}]
+	\begin{crl}[title = {\texorpdfstring{$F[X]$}{F[X]} is PID, UFD, and Noetherian}]
 		If $F$ is a field, $F[X]$ is a PID, UFD, and Noetherian.
 	\end{crl}
 (6) Let $I\subset R$ be an ideal, and define
@@ -131,8 +131,8 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 	\[\underbrace{1,2,4}_{\in \Z}\to \underbrace{\obar{1},\obar{2},\obar{1}}_{\in \Z/3\Z}\]
 \end{example}
 
-\begin{thm}[title = \texorpdfstring{$F[X]$}{TEXT} satisfies euclidean condition]
-	If $a(X),b(X)\in F[X]$ where $F$ is a field. Then there exist unique $q(X),r(X)\in F[X]$ such that $\deg (r(X)) < \deg (b(X))$ (or $r(X)=0$) for which $a(X)=q(X)\rdot b(X)+r(X)$.
+\begin{thm}[title = \texorpdfstring{$F[X]$}{F[X]} satisfies euclidean condition]
+	If $a(X),b(X)\in F[X]$ where $F$ is a field. Then there exist unique $q(X),r(X)\in F[X]$ such that $\deg (r(X)) < \deg (b(X))$ (or $r(X)=0$) for which \[a(X)=q(X)\rdot b(X)+r(X)\]
 \end{thm}
 \textit{Note:} Recall $\Z$ are a Euclidean Domain with $N(n)=|n|$, e.g
 \begin{align*}
