--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -58,7 +58,7 @@
 	it also factors in $\modZ{2}[X]$
 	\[X^2+1=(X+1)(X+1) \Mod{2}\]
 	Because $X^2+2X+1\equiv X^2+1 \Mod{2}$
-	\begin{prop}[title = \texorpdfstring{$R[X]$}{TEXT} is an integral domain]
+	\begin{prop}[title = \texorpdfstring{$R[X]$}{R[X]} is an integral domain]
 		Let $R$ be an integral domain and
 		$p(X),q(X)\in R[X]$
 		\begin{enumerate}
@@ -100,7 +100,7 @@
 	The \textbf{kernel} of a ring homomorphism $f: R\to S$ is the subset
 	\[\Ker f \coloneqq f^{-1}(0_S)\subset R\]
 \end{dfn}
-\begin{prop}[title = \texorpdfstring{$\Ker f$}{TEXT} is an ideal]
+\begin{prop}[title = \texorpdfstring{$\Ker f$}{Ker f} is an ideal]
 	Let $R,S$ be rings and $f: R \to S$ a homomorphism, then
 	\begin{enumerate}
 		\item $\Img f \subset S$ is a subring
