--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -61,7 +61,7 @@ and since $(A)$ is a left ideal, we have
 \[RA = (A)\]
 and specifically this is the smallest ideal needed to contain $A$.
 \end{proof}
-\begin{prop}[title =\texorpdfstring{$I\rdot J \subset I \cap J$}{TEXT}]
+\begin{prop}[title = {$I\, \dotproduct\, J \subset I \cap J$}]
 	If $I,J \subset R$ are ideals, then $I\rdot J$ is an ideal, $I\rdot J \subset I \cap J$.
 	\center
 	\begin{tikzcd}[column sep=0em,row sep=1em,arrows=dash]
@@ -126,10 +126,10 @@ We also say that if $b\in (a)$, that $a$ \textbf{divides} $b$, i.e $a\mid b$.
 	\item $(x^2)$ is \textbf{not}, e.g. $x\rdot x=x^2\in (x^2)$ but $x\notin (x^2)$.
 \end{itemize}
 \end{example}
-\begin{prop}[title = \texorpdfstring{$R$}{PDFstring} integral if \texorpdfstring{$\{0\}$}{TEXT} prime]
+\begin{prop}[title = \texorpdfstring{$R$}{R} integral if \texorpdfstring{$\{0\}$}{\{0\}} prime]
 	$R$ is an integral domain \textit{iff} $\{0\}$ is prime
 \end{prop}
-\begin{thm}[title = Prime Ideal \texorpdfstring{$\Longleftrightarrow R/P$}{TEXT} integral domain]
+\begin{thm}[title = Prime Ideal \texorpdfstring{$\Longleftrightarrow R/P$}{R/P} integral domain]
 	Assume $R$ is commutative.\\
 	An ideal $P\subset R$ is prime \textit{iff} $R/P$ is an integral domain.
 \end{thm}
