--- a/L7/L7.tex
+++ b/L7/L7.tex
@@ -105,7 +105,7 @@ Not all rings admit maximal ideals and a given ring may admit multiple maximal i
 	\quad \text{ or }
 	\underbrace{M'\notin \mathcal{S}}_{M' \text{ is not proper}} \implies M'=R\]
 \end{proof}
-\begin{thm}[title = \texorpdfstring{$M$}{TEXT} maximal in comm. \texorpdfstring{$R \Longleftrightarrow R/M$}{TEXT} is field]
+\begin{thm}[title = \texorpdfstring{$M$}{M} maximal in comm. \texorpdfstring{$R \Longleftrightarrow R/M$}{R iff R/M} is field]
 	If $R$ is a commutative ring with $1\ne 0$, then $M\subset R$ is maximal if and only if $R/M$ is a field.
 \end{thm}
 
