--- a/L9/L9.tex
+++ b/L9/L9.tex
@@ -77,7 +77,7 @@
 	\[R/(A_1\rdot \dots\rdot A_k)\cong R/(A_1\cap A_2\cap \dots \cap A_k) \cong (R/A_1)\times (R/A_2)\times (R/A_3)\times\dots\times(R/A_k)\]
 	So you can think of your quotient ring over the one ideal or over the separate components of the ideal.
 \end{crl}
-\begin{crl}[title = \texorpdfstring{$\modZ{n}$}{TEXT} isomorphic to quotients by prime factors]
+\begin{crl}[title = \texorpdfstring{$\modZ{n}$}{Z/nZ} isomorphic to quotients by prime factors]
 	Let $n$ be a positive integer with factorization into unique primes \[n=p_1^{\alpha_1} p_2^{\alpha_2}\dots p_k^{\alpha_k}\]
 	then
 	\[\modZ{n} \cong (\modZ{p_1^{\alpha_1}})\times (\modZ{p_2^{\alpha_2}})\times \dots \times (\modZ{p_k^{\alpha_k}})\]
