--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -61,7 +61,7 @@ and since $(A)$ is a left ideal, we have
 \[RA = (A)\]
 and specifically this is the smallest ideal needed to contain $A$.
 \end{proof}
-\begin{prop}[title = {$I\, \dotproduct\, J \subset I \cap J$}]
+\begin{prop}[title = \texorpdfstring{$I\, \dotproduct\, J \subset I \cap J$}{I times J in I intersect J}]
 	If $I,J \subset R$ are ideals, then $I\rdot J$ is an ideal, $I\rdot J \subset I \cap J$.
 	\center
 	\begin{tikzcd}[column sep=0em,row sep=1em,arrows=dash]
