--- a/L1/L1.tex
+++ b/L1/L1.tex
@@ -1,7 +1,7 @@
 \documentclass[../Main.tex]{subfiles}
 \setcounter{chapter}{0}
 \begin{document}
-\chapter{Definitions and Examples of Rings}
+\chapter{L1: Definitions and Examples of Rings}
 \begin{dfn}[title= Rings and Fields]
 	A \textbf{ring} $R$ is a set with two binary operations $+,\rdot$ (addition and multiplication), i.e 
 	\begin{align*}
