--- a/L10/L10.tex
+++ b/L10/L10.tex
@@ -2,8 +2,7 @@
 \setcounter{chapter}{9}
 
 \begin{document}
-\chapter{Euclidean Domains and PIDs}
-\section*{Euclidean Domains}
+\chapter{L10: Euclidean Domains and PIDs}
 \begin{dfn}[title = Norm]
 	Let $R$ be an integral domain.\\
 	Any function
