--- a/L11/L11.tex
+++ b/L11/L11.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{10}
 
 \begin{document}
-\chapter{Unique Factorization Domains}
+\chapter{L11: Unique Factorization Domains}
 \begin{dfn}[title = {Irreducible/Reducible, Prime, Associate Elements}]
 	Let $R$ be an integral domain
 	\begin{enumerate}
