--- a/L12/L12.tex
+++ b/L12/L12.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{11}
 
 \begin{document}
-\chapter{PIDs are UFDs and Polynomial Rings}
+\chapter{L12: PIDs are UFDs and Polynomial Rings}
 \begin{dfn}[title = {Ascending Chains, Noetherian Ring}]
 	Let $R$ be a commutative ring with $1\ne 0$.\\
 	An \textbf{ascending chain} of ideals in $R$ is a sequence
@@ -174,7 +174,6 @@ Let $R$ be an commutative integral domain with $1\ne 0$. Recall some facts we've
 	\[(X-i)| X^2+1 \text{ in } \C[X] \text{ but not } \R[X]\]
 	Since $X^2+1$ has no nontrivial factors in $\R[X]$.
 \end{example}
-\newpage
 \section*{Polynomial Rings with Multiple Variables}
 
 \begin{dfn}[title = Multivariable Polynoimal Ring]
