--- a/L13/L13.tex
+++ b/L13/L13.tex
@@ -2,7 +2,8 @@
 \setcounter{chapter}{12}
 
 \begin{document}
-\chapter{PIDs are UFDs and Polynomial Rings}
+\phantomsection
+\chapter{L13: Polynomial Rings over UFDs}
 
 \begin{lem}[title = Gauss' Lemma]
 	Let $R$ be a UFD and $F$ its field of fractions. Let $p(X)\in R[X]$, then if $p(X)$ is reducible in $F[X]$ then $p(X)$ is reducible in $R[X]$.\\
