--- a/L2/L2.tex
+++ b/L2/L2.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{1}
 
 \begin{document}
-\chapter{More Examples}
+\chapter{L2: More Examples}
 Let's see some basic properties of a ring $R$:
 \begin{enumerate}
 	\item $0\rdot a= a\rdot 0=0 \quad \forall a \in R$
@@ -80,7 +80,7 @@ Let's see some basic properties of a ring $R$:
 	\[\obar{a}\rdot \obar{q}=\obar{a\rdot q}= \obar{d\rdot k\rdot q} = \obar{n \rdot k}=\obar{n}=\obar{0}\] 
 	Thus, $\obar{a}$ is a zero divisor.
 \end{proof}
-\begin{crl}[title= $\modZ{n}$ is a field for prime $n$]
+\begin{crl}[title= \texorpdfstring{$\modZ{n}$}{Z/nZ} is a field for prime \texorpdfstring{$n$}{n}]
 	If $n$ is prime, then $\Z/n\Z$ is a field.
 \end{crl}
 \begin{proof}
