--- a/L3/L3.tex
+++ b/L3/L3.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{2}
 
 \begin{document}
-	\chapter{Ring Homomorphisms}
+	\chapter{L3: Ring Homomorphisms}
 	\section*{Polynomial Rings}
 	Fix a commutative ring $R$ with $1$ (e.g. $R=\Z, R=\Q$, etc)
 	Let $X$ be an indeterminate (this means $X$ is just a symbol without an exact representation, compared to to when you think $x$ is a variable representing a number).
