--- a/L4/L4.tex
+++ b/L4/L4.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{3}
 
 \begin{document}
-\chapter{Quotient Rings}
+\chapter{L4: Quotient Rings}
 Recall that given a ring homomorphism $f: R\to S$, the kernel of $f$, $\Ker f$, is a subring of $R$.
 \begin{dfn}[title= Coset and Quotient Ring]
 	Given a ring homomorphism $f:R\to S$, let $I= \Ker f$ and $r\in R$.\\
