--- a/L5/L5.tex
+++ b/L5/L5.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{4}
 
 \begin{document}
-\chapter{Isomorphism Theorems}
+\chapter{L5: Isomorphism Theorems}
 \begin{thm}[title = The First Isomorphism Theorem]
 	If $f:R\to S$ is a ring homomorphism and $I=\Ker f$. Then
 	\[R/I\cong \Img f\]
