--- a/L6/L6.tex
+++ b/L6/L6.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{5}
 
 \begin{document}
-\chapter{More on Ideals}
+\chapter{L6: More on Ideals}
 Let $R$ be a ring with $1\ne 0$.\\
 Recall that if $A\subset R$, then
 	\[(A)= \bigcap_{\mathclap{\substack{I \subset R \text{ ideals}\\A\subset I} } } I\]
