--- a/L7/L7.tex
+++ b/L7/L7.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{6}
 
 \begin{document}
-\chapter{Maximal Ideals}
+\chapter{L7: Maximal Ideals}
 Let $R$ be a commutative ring with $1\ne 0$.
 \begin{prop}[title = Ideals containing units]
 	Let $I\subset R$ an ideal
