--- a/L8/L8.tex
+++ b/L8/L8.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{7}
 
 \begin{document}
-\chapter{More on Maximal Ideals and Ring of Fractions}
+\chapter{L8: Maximal Ideals and Ring of Fractions}
 
 \textit{Recall}: $(X) \subset \Z[X]$ is prime, but $(X)\subsetneq (2,X)$, so it not maximal.\\
 $(X)\in \R[X]$ is maximal because $\R[X]/(X) \cong \R$ is a field
@@ -81,7 +81,6 @@ can have different properties as ideals, e.g
 \underbrace{(X^2+1)\subset \R[X]}_{\text{maximal}} &\longrightarrow \underbrace{(X^2+1) \subset \C[X]}_{\text{not prime, not maximal}}
 \end{align*}\newpage
 \section*{The Ring of Fractions}
-
 \textbf{\textit{Q:}} How do we build $\Q$ out of $\Z$?\\
 We want to add in multiplicative inverses like $\frac{1}{2},\frac{1}{3},\frac{1}{4},\dots$ but we can't just add them in and get a ring.\\
 Consider
