--- a/L9/L9.tex
+++ b/L9/L9.tex
@@ -2,7 +2,7 @@
 \setcounter{chapter}{8}
 
 \begin{document}
-\chapter{The Chinese Remainder Theorem}
+\chapter{L9: The Chinese Remainder Theorem}
 \begin{dfn}[title = Direct Product]
 	Let $R,S$ be rings.\\
 	The \textbf{direct product} of $R$ and $S$ is the ring
